<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/akita_no_omatrusi_omatsuri_preferences">
        <com.damburisoft.android.yamalocationsrv.OmatsuriListPreference 
            android:key="@string/omatsuri_name_key"
            android:title="@string/omatsuri"
            android:summary="@string/omatsuri_name_summary"
            android:dialogTitle="@string/omatsuri_name_dialogtitle" 
            android:entries="@array/omatsuri_name_entries"
            android:entryValues="@array/omatsuri_name_values" />

        <com.damburisoft.android.yamalocationsrv.OmatsuriListPreference
            android:key="@string/hikiyama_key"
            android:title="@string/hikiyama_title"
            android:summary="@string/hikiyama_summary"
            android:dialogTitle="@string/hikiyama_dialogtitle"
            android:entries="@array/hikiyama_entries"
            android:entryValues="@array/hikiyama_values" />
            
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/akita_no_omatrusi_location_preferences">
        <EditTextPreference
            android:key="@string/debug_gps_update_minDistance_key"
            android:defaultValue="@string/default_gps_update_minDistance"
            android:title="@string/debug_gps_update_minDistance_title"
            android:summary="@string/debug_gps_update_minDistance_summary"
            android:dialogTitle="@string/debug_gps_update_minDistance_dialogtitle" />
            
        <EditTextPreference
            android:key="@string/debug_gps_min_required_accuracy_key"
            android:defaultValue="@string/default_gps_min_required_accuracy"
            android:title="@string/debug_gps_min_required_accuracy_title"
            android:summary="@string/debug_gps_min_required_accuracy_summary"
            android:dialogTitle="@string/debug_gps_min_required_accuracy_dialogtitle" />
            
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/akita_no_omatsuri_interval_preferences">
        <EditTextPreference 
            android:key="@string/debug_polling_interval_key"
            android:defaultValue="@string/default_polling_interval"            
            android:title="@string/debug_polling_interval_title"
            android:summary="@string/debug_polling_interval_summary"
            android:dialogTitle="@string/debug_polling_interval_dialogtitle" />
        <EditTextPreference 
            android:key="@string/debug_pushing_interval_key"
            android:defaultValue="@string/default_pushing_interval"            
            android:title="@string/debug_pushing_interval_title"
            android:summary="@string/debug_pushing_interval_summary"
            android:dialogTitle="@string/debug_pushing_interval_dialogtitle" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/akita_no_omatsuri_devicename_preferences">
        <EditTextPreference
            android:key="@string/device_nickname_key"
            android:title="@string/device_nickname_title"
            android:summary="@string/device_nickname_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/akita_no_omatrusi_debug_preferences">
    
        <CheckBoxPreference 
            android:key="isLocalServer"
            android:defaultValue="false" 
            android:title="@string/isLocalServer_title"
            android:summary="@string/isLocalServer_summary" />

        <EditTextPreference 
            android:key="test_local_server"
            android:defaultValue="@string/default_test_local_server"
            android:title="@string/test_local_server_title"
            android:summary="@string/test_local_server_summary" />
            

    </PreferenceCategory>
</PreferenceScreen>
